--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
             <artifactId>j2objc-annotations</artifactId>
             <version>2.8</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.9</version>
+        </dependency>
+
 
 
     </dependencies>
